# openalmix

./: .gitignore  CMakeLists.txt  led_test.py
src/: SamplePlayer.cpp  SamplePlayer.h  SampleRecorder.cpp  SampleRecorder.h  SoundDevice.cpp  SoundDevice.h  main.cpp
